--- a/html/css/base.css
+++ b/html/css/base.css
@@ -1,24 +1,35 @@
-﻿body {
+﻿* {
+ font-family: "游ゴシック", "MS ゴシック", sans-serif;
+ font-weight: lighter;
+ color: #FFFFFF;
+}
+
+body {
  padding: 20px;
  height: 100%;
 }
 
 .body_index {
- background-image: url("../image/back.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
- background-blend-mode: soft-light;
- background-color: #555555;
+ background-image: url("../image/back.png");
+ background-blend-mode: screen;
+}
 
- color: #FFFFFF;
- font-weight: lighter;
+p {
+ padding: 5px 40px;
+}
+
+h1 {
+ font-weight: bold;
+ padding: 20px;
 }
 
 h2 {
  font-size: 22px;
  font-weight: bold;
- background-color: #555555;
+ background-color: #333333;
  margin: 25px 8px 5px;
  padding: 8px;
  padding-left: 15px;
@@ -42,9 +53,10 @@ h2 {
 }
 
 .card h1 {
+ padding: 0px;
  position: absolute;
- top: 92px;
- left: 10px;
+ top: 88px;
+ left: 8px;
  color: #FFFFFF;
  font-size: 22px;
  font-weight: bold;
@@ -61,6 +73,7 @@ h2 {
 }
 
 .card p {
+ font-size: 15px;
  position: absolute;
  top: 150px;
  padding: 10px;
@@ -91,4 +104,79 @@ h2 {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
+}
+
+.navbar {
+ padding: 0px;
+ margin: 0px;
+ background-color: #222222;
+ position: fixed;
+ top: 0;
+ right: 0;
+ left: 0;
+ min-height: 64px;
+ margin-bottom: 20px;
+ display: block;
+}
+
+.navh1 {
+ color: #888888;
+ padding: 20px;
+ margin: 0px;
+ float: left;
+}
+
+.nav>li {
+ background-color: #333333;
+ border-right: 1px solid #222222;
+ display: table-cell;
+ vertical-align: middle;
+ width: 128px;
+}
+
+.nav>li:hover {
+ background-color: #222222;
+}
+
+.navul {
+ display: table;
+ table-layout: fixed;
+ text-align: center;
+}
+
+.navul li a{
+ color: #FFFFFF;
+ display: block;
+ font-size: 12px;
+ text-decoration: none;
+ padding: 10px 0px;
+}
+
+.logul{
+ text-decoration: none;
+ list-style-type: none;
+}
+
+.logul li{
+ line-height: 20px;
+}
+
+#top {
+ margin-top:-64px;
+ padding-top:64px;
+}
+
+#about {
+ margin-top:-64px;
+ padding-top:64px;
+}
+
+#log {
+ margin-top:-64px;
+ padding-top:64px;
+}
+
+#update {
+ margin-top:-64px;
+ padding-top:64px;
 }
