ナビゲーション表示の仕様変更
横幅が狭いとボタン幅が縮小するのではなく下に行くよう変更した。

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -104,6 +104,7 @@ h2 {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
+ margin: 20px;
 }
 
 .navbar {
@@ -139,7 +140,8 @@ h2 {
 }
 
 .navul {
- display: table;
+ display: flex;
+ flex-wrap: wrap;
  table-layout: fixed;
  text-align: center;
 }
