レイアウトの修正

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -1,5 +1,5 @@
 ﻿* {
- font-family: "游ゴシック", "MS ゴシック", sans-serif;
+ font-family: "メイリオ", "游ゴシック", "MS ゴシック", sans-serif;
  font-weight: lighter;
  color: #FFFFFF;
 }
