自己紹介文にmin-widthを
320pxで

--- a/html/css/member.css
+++ b/html/css/member.css
@@ -16,6 +16,7 @@
  padding: 12px 12px 12px 24px;
  margin: 12px 24px 48px 210px;
  min-height: 130px;
+ min-width: 320px;
  opacity: 0.9;
  border-radius: 16px;
  background-color:#222222;
