--- a/html/css/navbar.css
+++ b/html/css/navbar.css
@@ -1,3 +1,7 @@
+.navbody {
+ background-color: #222222;
+}
+
 .navbar {
  padding: 0px;
  margin: 0px;
@@ -12,10 +16,15 @@
 }
 
 .navimg {
- padding: 20px 30px;
- margin: 0px;
+ padding: 0px;
+ margin: 20px 30px;
  float: left;
  border-style: none;
+}
+
+.navimg:hover {
+ background-color: #222222;
+ opacity: 0.2;
 }
 
 .nav>li {
