スマートフォン用のcss追加
カードは中央ぞろえするようにした。ナビゲーションバーはロゴ以外非表示にする予定（未完成）。

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -17,12 +17,14 @@ body {
  margin-bottom: 5em;
 }
 
-.body_index {
- background-size: cover;
- background-repeat: no-repeat;
- background-attachment: fixed;
- background-image: url("../image/back.png");
- background-blend-mode: screen;
+@media screen and (min-width:600px){
+ .body_index {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: url("../image/back.png");
+  background-blend-mode: screen;
+ }
 }
 
 p {
